plugins {
    id 'java'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.amazonaws:aws-lambda-java-core:1.2.3'
    implementation 'com.amazonaws:aws-lambda-java-events:3.11.4'
    testImplementation 'junit:junit:4.13.2'
}

sourceCompatibility = 21
targetCompatibility = 21
